--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    I’m originally from Los Angeles but currently in New York at Columbia University. I’m passionate about the safety and health of the Internet and working to ensure that as many people as possible can get access to it. I enjoy traveling and learning, making art, running and hiking, playing with data, and exploring new food cultures.
+                                    I’m originally from Los Angeles but currently in New York at Columbia University. I’m passionate about the safety and health of the Internet and working to ensure that as many people as possible have access. I enjoy traveling and learning, making art, running and hiking, playing with data, and exploring new food cultures.
                                 </p>
                             </div>
                             
