--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="blog" id="blog">
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>From Writing</p>
+                    <p>Research & Writing</p>
                     <p>I study International Security Policy and Technology, Media and Communications at Columbia University. I’m interested in the behaviors of bad actors online, using data to analyze networks, the digital divide, and technology and national security.</p>
                     
                 </div>
