--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
                             </div>
                         </div>
                     </div>
+                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class="fa fa-laptop"></i>
+                            </div>
+                            <div class="service-text">
+                                <h3>R</h3>
+                                <p>
+                                    <a href=""> I used R to explore Lorde's music to answer the question: is her music happy or sad?</a> 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                   
                    
                 </div>
