--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="service-text">
                                 <h3>R</h3>
                                 <p>
-                                    <a href=""> I used R to explore Lorde's music to answer the question: is her music happy or sad?</a> 
+                                    <a href=""> I used R to explore Lorde's music through text mining</a> 
                                 </p>
                             </div>
                         </div>
