--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <div class="service-text">
                                 <h3>Stata</h3>
                                 <p>
-                                    <a href="https://www.ntia.gov/blog/2020/more-half-american-households-used-internet-health-related-activities-2019-ntia-data-show"> I co-authored a blog post that used Stata to analyze Americans' Internet habits, specifically focusing on telemedicine and telehealth</a> 
+                                    <a href="https://www.ntia.gov/blog/2020/more-half-american-households-used-internet-health-related-activities-2019-ntia-data-show"> I co-authored an NTIA blog post that used Stata to analyze Americans' Internet habits, specifically focusing on telemedicine and telehealth</a> 
                                 </p>
                             </div>
                         </div>
