--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 <h3>Tableau</h3>
                                 <p>
                                    
-                                    <a href="https://www.dropbox.com/s/as6p4oipdovs00h/NYC%20Hate%20Crimes%20Analysis.pdf?dl=0"> I used Tableau to create a presentation on the rise of Asian American attacks in New York City based on NYC's 311 data for a Data Visualization course</a>
+                                    <a href="https://github.com/michellecow/site-files/blob/main/NYC%20Hate%20Crimes%20Analysis.pdf"> I used Tableau to create a presentation on the rise of Asian American attacks in New York City based on NYC's 311 data for a Data Visualization course</a>
                                 </p>
                             </div>
                         </div>
