--- a/index.html
+++ b/index.html
@@ -167,7 +167,21 @@
                                 <h3>Python</h3>
                                 <p>
                                    
-                                    <a href=""> I explored tweets from the Russian Internet Research Agency using Python for a Mis- and Disinformation course on propaganda and Russia.</a>
+                                    <a href=""> I explored tweets from the Russian Internet Research Agency using Python for a Mis- and Disinformation course on propaganda and Russia</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
+                        <div class="service-item">
+                            <div class="service-icon">
+                                <i class="fa fa-laptop-code"></i>
+                            </div>
+                            <div class="service-text">
+                                <h3>Gephi</h3>
+                                <p>
+                                   
+                                    <a href=""> I scraped the Wikipedia category: "White supremacist groups in the United States" to conduct an in-depth network analysis using Gephi</a>
                                 </p>
                             </div>
                         </div>
