--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                                 <li><i>Gilmore Girls</i></li>
                                 <li><i>How to Train Your Dragon</i></li>
                                 <li><i>Mad Men</i></li>
+                                <li><i>Minari</i><li>
                                 <li><i>Mindhunter</i></li>
                                 <li><i>White Collar</i></li>
                                 <li><i>Saving Mr. Banks</i></li>
